--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,62 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
 altair==4.2.2
+appnope==0.1.3
+asttokens==2.2.1
 async-timeout==4.0.2
 attrs==22.2.0
 autopep8==2.0.2
+backcall==0.2.0
+black==23.1.0
 blinker==1.5
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
+comm==0.1.3
 dataclasses-json==0.5.7
+debugpy==1.6.6
 decorator==5.1.1
 entrypoints==0.4
+executing==1.2.0
 frozenlist==1.3.3
 gitdb==4.0.10
 GitPython==3.1.31
 greenlet==2.0.2
 idna==3.4
 importlib-metadata==6.0.0
+ipykernel==6.22.0
+ipython==8.11.0
+jedi==0.18.2
 Jinja2==3.1.2
 jsonschema==4.17.3
+jupyter_client==8.1.0
+jupyter_core==5.3.0
 langchain==0.0.115
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
+nest-asyncio==1.5.6
 numpy==1.24.2
 openai==0.27.2
 packaging==23.0
 pandas==1.5.3
+parso==0.8.3
+pathspec==0.11.1
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.4.0
+platformdirs==3.1.1
+prompt-toolkit==3.0.38
 protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==11.0.0
 pycodestyle==2.10.0
 pydantic==1.10.6
@@ -45,6 +68,7 @@ python-dateutil==2.8.2
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
+pyzmq==25.0.2
 regex==2022.10.31
 requests==2.28.2
 rich==13.3.2
@@ -52,6 +76,7 @@ semver==2.13.0
 six==1.16.0
 smmap==5.0.0
 SQLAlchemy==1.4.46
+stack-data==0.6.2
 streamlit==1.20.0
 tenacity==8.2.2
 tiktoken==0.3.2
@@ -59,6 +84,7 @@ toml==0.10.2
 toolz==0.12.0
 tornado==6.2
 tqdm==4.65.0
+traitlets==5.9.0
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 tzdata==2022.7
@@ -66,5 +92,6 @@ tzlocal==4.2
 urllib3==1.26.15
 validators==0.20.0
 watchdog==2.3.1
+wcwidth==0.2.6
 yarl==1.8.2
 zipp==3.15.0
