--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ Jinja2==3.1.2
 jsonschema==4.17.3
 jupyter_client==8.1.0
 jupyter_core==5.3.0
-langchain==0.0.115
+langchain==0.0.124
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
@@ -65,6 +65,7 @@ Pygments==2.14.0
 Pympler==1.0.1
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
