--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ Jinja2==3.1.2
 jsonschema==4.17.3
 jupyter_client==8.1.0
 jupyter_core==5.3.0
-langchain==0.0.124
+langchain==0.0.134
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
@@ -44,6 +44,7 @@ mypy-extensions==1.0.0
 nest-asyncio==1.5.6
 numpy==1.24.2
 openai==0.27.2
+openapi-schema-pydantic==1.2.4
 packaging==23.0
 pandas==1.5.3
 parso==0.8.3
