--- a/requirements.txt
+++ b/requirements.txt
@@ -28,11 +28,29 @@ defusedxml==0.7.1
 entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.3
+filelock==3.12.0
 fqdn==1.5.1
 frozenlist==1.3.3
+fsspec==2023.5.0
 gitdb==4.0.10
 GitPython==3.1.31
+google-ai-generativelanguage==0.2.0
+google-api-core==2.11.0
+google-auth==2.17.3
+google-cloud-aiplatform==1.25.0
+google-cloud-bigquery==3.10.0
+google-cloud-core==2.3.2
+google-cloud-resource-manager==1.10.0
+google-cloud-storage==2.9.0
+google-crc32c==1.5.0
+google-generativeai==0.1.0rc2
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.0
 greenlet==2.0.2
+grpc-google-iam-v1==0.12.6
+grpcio==1.54.0
+grpcio-status==1.54.0
+huggingface-hub==0.14.1
 idna==3.4
 importlib-metadata==6.0.0
 ipykernel==6.22.0
@@ -53,7 +71,7 @@ jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
-langchain==0.0.151
+langchain==0.0.173
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
@@ -61,6 +79,7 @@ marshmallow-enum==1.5.1
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
+mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
 nbclassic==0.5.5
@@ -68,6 +87,7 @@ nbclient==0.7.4
 nbconvert==7.3.1
 nbformat==5.8.0
 nest-asyncio==1.5.6
+networkx==3.1
 notebook==6.5.4
 notebook_shim==0.2.3
 numexpr==2.8.4
@@ -85,11 +105,14 @@ Pillow==9.4.0
 platformdirs==3.1.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
+proto-plus==1.22.2
 protobuf==3.20.3
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==11.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycodestyle==2.10.0
 pycparser==2.21
 pydantic==1.10.6
@@ -111,25 +134,31 @@ requests==2.28.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.3.2
+rsa==4.9
 semver==2.13.0
 Send2Trash==1.8.0
+Shapely==1.8.5.post1
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.4.1
-SQLAlchemy==1.4.46
+SQLAlchemy==2.0.12
 stack-data==0.6.2
-streamlit==1.21.0
+streamlit==1.22.0
+sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.2
 terminado==0.17.1
 tiktoken==0.3.2
 tinycss2==1.2.1
+tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
+torch==2.0.1
 tornado==6.2
 tqdm==4.65.0
 traitlets==5.9.0
+transformers==4.29.1
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 tzdata==2022.7
