--- a/requirements.txt
+++ b/requirements.txt
@@ -106,6 +106,7 @@ platformdirs==3.1.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
 proto-plus==1.22.2
+protobuf==3.20.3
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
